pushing the web dev page with style additions for phone, medium and big; additionally i have the basic beginning for eclipse. currently, my only example. i need to also show the how behind development to make the page really useful as a portfolio

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Creepster' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600,800' rel='stylesheet' type='text/css'>
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -83,6 +83,7 @@
     <script src="scripts/jajourdagithubio.js"></script>
     <script src="scripts/services.js"></script>
     <script src="scripts/controllers.js"></script>
+    <script src="scripts/directives.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
     <!-- endbuild -->
