--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>go to dist...</title>
 	<script>
-		window.location.href = 'dist/'
+		window.location.href = 'dist/';
 	</script>
 </head>
 <body>
